# moses

./: .gitignore  .pre-commit-config.yaml  ACTIVATION.md  AGENT.md  BOOTSTRAP.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_PUSH.md  HEARTBEAT.md  LICENSE  Makefile  README.md  SOUL.md  TOOLS-REALITY.md  activation_sequence.md  docker-compose.yml  integration_spec.md  orchestration_graph.md  pyproject.toml  requirements-dev.txt  requirements.txt  slurm-train.sh
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: train_ppo.yaml
docs/: API.md  API_CAD.md  API_DATA.md  API_DEPLOY.md  API_DESIGN.md  API_EMERGENCE.md  API_EXPERIMENTS.md  API_GR00T.md  API_INDUSTRIAL.md  API_MANUFACTURING.md  API_MEMORY.md  API_META_LEARNING.md  API_MONITORING.md  API_OVERVIEW.md  API_PERCEPTION.md  API_REALWORLD.md  API_RECURSION.md  API_SAFETY.md  API_SELF_MODIFY.md  API_SIM.md  API_TRAINING.md  BENCHMARKS.md  EXAMPLES.md  TROUBLESHOOTING.md
docs/ADRs/: ADR-001-isaac-lab-over-mujoco.md
integration/: human_checkpoint.py  titan_moses_protocol.py
k8s/: README.md  configmap.yaml  job-eval.yaml  job-train.yaml  namespace.yaml  pvc.yaml  rbac.yaml  service-monitor.yaml
knowledge/: code-patterns.md  component-database.md  electronics-stack.md  manufacturing-methods.md  materials-selection.md  software-architecture.md  testing-strategy.md
moses/cad/: __init__.py  assembly_manager.py  mesh_generator.py  parametric_humanoid.py
moses/data/: __init__.py  ingestion.py  preprocessing.py  storage.py
moses/deploy/: __init__.py  safe_deploy.py  shadow.py  validation.py
moses/design/: __init__.py  biomechanics.py  cost_model.py  structural_analysis.py  weight_optimizer.py
moses/emergence/: __init__.py  behavior_arbitration.py  consciousness_sim.py  curiosity.py  swarm_intelligence.py
moses/envs/: __init__.py  humanoid_env.py
moses/experiments/: __init__.py  budget.py  runner.py  search_space.py
moses/gr00t/: adapter.py  embodiment.py  finetune.py
moses/industrial/: __init__.py  ethercat.py  plc.py  ros2_industrial.py  safety.py
moses/manufacturing/: __init__.py  carbon_fiber.py  cnc_generator.py  print_generator.py  sheet_metal.py
moses/memory/: __init__.py  causal_reasoning.py  experience_store.py  knowledge_graph.py  transfer_learning.py
moses/meta_learning/: __init__.py  curriculum_learning.py  hyperparameter_search.py  neural_architecture_search.py  reward_shaping.py
moses/perception/: __init__.py  force_estimation.py  fusion.py  tactile.py  vision3d.py
moses/realworld/: __init__.py  calibration.py  deployment.py  domain_adaptation.py  system_id.py
moses/recursion/: __init__.py  meta_meta_learning.py  predictor.py  self_healing.py  world_model.py
moses/robots/: moses_humanoid.usd
moses/safety/: __init__.py  approval_gates.py  bounds_checker.py  drift_detector.py  integrity_checker.py
moses/self_modify/: __init__.py  ab_tester.py  code_mutator.py  evolution.py  rollback.py
moses/sim/: __init__.py  deformable.py  manipulation.py  multiphysics.py  sensors.py
moses/training/: __init__.py  pipeline.py  registry.py  scheduler.py
moses/utils/: checkpoint.py  domain_randomization.py
scripts/: eval_policy.py  export_tensorrt.py  moses_loop.py  run_tests.py  train_humanoid.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_env_creation.py  test_training_smoke.py
tests/unit/: __init__.py  test_checkpoint.py  test_kinematics.py  test_rewards.py
