[build-system]
# Modern Python packaging: use hatchling as the build backend.
# Hatchling is fast, PEP 517/660 compliant, and requires no boilerplate.
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
# ── Project metadata ──────────────────────────────────────────────────────
name = "moses"
dynamic = ["version"]
description = "Moses v3.0 — Autonomous robotics stack with Isaac Lab integration."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Alex", email = "alex@example.com" },
]
keywords = ["robotics", "reinforcement-learning", "isaac-lab", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ── Runtime dependencies ──────────────────────────────────────────────────
dependencies = [
    # Core
    "numpy>=1.24,<2.0",
    "torch>=2.2.0",
    "gymnasium>=0.29.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    # Isaac Lab (NVIDIA Omniverse)
    "isaaclab>=0.22.0",
    # Robotics / RL
    "rsl-rl-lib>=2.0.0",
    "stable-baselines3>=2.3.0",
    # Utilities
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "typer>=0.12.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
# Extra dependencies for headless rendering / cameras in Isaac Sim
render = [
    "opencv-python>=4.9.0",
    "imageio>=2.34.0",
]

[project.scripts]
# CLI entry points installed into the virtualenv bin/ directory
moses = "moses.cli:app"

[project.urls]
Homepage = "https://github.com/alex/moses"
Repository = "https://github.com/alex/moses.git"
Issues = "https://github.com/alex/moses/issues"

[tool.hatch.version]
# Version is read from the package __init__.py automatically.
path = "src/moses/__init__.py"

[tool.hatch.build.targets.wheel]
# src/ layout: package code lives under src/moses/
packages = ["src/moses"]

# ═══════════════════════════════════════════════════════════════════════════
#  Tool configurations
# ═══════════════════════════════════════════════════════════════════════════

[tool.black]
# uncompromising Python code formatter
target-version = ["py310", "py311", "py312"]
line-length = 100
extend-exclude = '''
/(
  | \.git
  | \.venv
  | \.mypy_cache
  | build
  | dist
)/
'''

[tool.ruff]
# extremely fast Python linter & auto-fixer
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "ARG"]
"scripts/*" = ["D"]

[tool.mypy]
# static type checker
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
exclude = [
    '\\.venv',
    "build",
    "dist",
    "tests",
]

[tool.pytest.ini_options]
# test runner configuration
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a GPU",
    "integration: marks integration tests",
    "isaac: marks tests that require Isaac Sim/Lab",
]

[tool.coverage.run]
source = ["src/moses"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
